--- a/templates/index.html
+++ b/templates/index.html
@@ -118,8 +118,9 @@
                         for (var i = 1; i <= json["results"].length; i++) {
                             res_div = `<div id='${i}'></div>`;
                             $(".results").append(res_div);
-                            // console.log(json['results'][i-1]);
-	                        $("#"+i).append(`<p> ${json['results'][i-1]} </p><hr>`);
+                            console.log(json['results'][i-1]);
+                            $("#"+i).append(`<h4> ${json['results'][i-1]['title']} </h4>`);
+	                        $("#"+i).append(`<p> ${json['results'][i-1]['text']} </p><hr>`);
                         }
                     },
                     error: function(xhr, errmsg, err) {
